major changes and updates, see description
added Airports class and .csv of all world airports and their gps locations etc, (sourced from https://ourairports.com/world.html), nearly completed the BoardingPass class to reflect logic changes (Automatic time, distance, ticket price, and pass number generation)